complex syntax analysis

--- a/CustomerCalculator/CustomerCalculator.vcxproj
+++ b/CustomerCalculator/CustomerCalculator.vcxproj
@@ -124,10 +124,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="children_opt.cpp" />
+    <ClCompile Include="functinos.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="children_opt.h" />
+    <ClInclude Include="functions.h" />
     <ClInclude Include="ids.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
