--- a/CustomerCalculator/CustomerCalculator.vcxproj.filters
+++ b/CustomerCalculator/CustomerCalculator.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClCompile Include="children_opt.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="functinos.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="children_opt.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="ids.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="functions.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
