--- a/CustomerCalculator/CustomerCalculator.vcxproj.filters
+++ b/CustomerCalculator/CustomerCalculator.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="functions.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="error.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
